<resources>
    <string name="app_name" translatable="false">StudyTime</string>
    <string name="timer_name">Timer</string>
    <string name="calendar_name">Calendar</string>
    <string name="session_list_name">Session List</string>
    <string name="add_session_name">Add Session</string>
    <string name="move_to_calendar">Calendar</string>
    <string name="move_to_timer">Timer</string>
    <string name="move_to_list">List View</string>
    <string name="move_to_addSession">Add Session</string>
    <string name="return_to_previous">Return</string>
    <string name="string_course">string_course_name</string>
    <string name="string_date">string_date</string>
    <string name="string_time">string_time</string>
    <string name="test">test_string</string>
    <string name="startButton">Start</string>
    <string name="pauseButton">Pause</string>
    <string name="stopButton">Stop</string>
    <string name="myDate">Date</string>
    <string name="getTime">Time</string>
    <string name="addSessionDate">Date</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Study Time</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calendar_view">Calendar View</string>
    <string name="add_session">Add Session</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycler">List View</string>


    <string name="course_prompt">Choose a course:</string>
    <string name="choose_course">Choose Course</string>
    <string name="saveStoppedTime">saveStoppedTime</string>
    <string name="saveCourse">Save Course</string>

    <string-array name="course_array">
        <item>CS 246</item>
        <item>BIO 101</item>
        <item>SCRIPTURES</item>

    </string-array>


</resources>