<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_constraint"
            android:icon="@android:drawable/btn_star_big_on"
            android:tint="@color/themeOrange"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/add_session"
            android:icon="@android:drawable/ic_input_add"
            android:tint="@color/themeOrange"
            android:title="@string/add_session" />
        <item
            android:id="@+id/calendar_view"
            android:icon="@android:drawable/ic_menu_month"
            android:tint="@color/themeOrange"
            android:title="@string/calendar_view" />
        <item
            android:id="@+id/recycler_view"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:tint="@color/themeOrange"
            android:title="@string/recycler" />
        <item
            android:id="@+id/add_course_view"
            android:icon="@drawable/ic_menu_manage"
            android:tint="@color/themeOrange"
            android:title="@string/add_course" />

    </group>
</menu>