<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:id="@+id/txt_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_course"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_date"
        android:padding="4dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_time"
        android:padding="4dp"
        android:textSize="18sp" />
</LinearLayout>