<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.StudyTime.HomeFragment">

        <Button
            android:id="@+id/startButton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:onClick="startPauseTimer"
            android:text="@string/startButton"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleTimer" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="stopTimer"
            android:text="@string/stopButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startButton" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Chronometer
            android:id="@+id/simpleTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="10sp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startButton" />













    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="@color/themeOrange"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>
